hphp/hack/test/typecheck/keyset/keyset_literal_wrong_bracket.php.exp
File "keyset_literal_wrong_bracket.php", line 4, characters 16-16:
Expected [ (Parsing[1002])
