hphp/hack/test/typecheck/keyset/keyset_literal_wrong_bracket.php
<?hh

function foo() : keyset<int, int> {
  return keyset{1, 2, 3};
}
